2003-05-19  Derek Atkins  <derek@ihtfp.com>

	* src/engine/QueryNew.[ch]: add gncQueryGetBooks() API to return
	  list of books in a query.
	* src/business/business-core/gncInvoice.[ch]: add INVOICE_POST_LOT
	  query parameter methods

	* src/engine/gnc-event*: add an api to force an event even when
	  events are suspended.  Without such an API, events can be lost
	  if the event system is suspended when the event comes in.

	* src/gnome-utils/dialog-query-list*: the glade and C code for
	  a general QueryList Dialog.
	* src/gnome-utils/Makefile.am: compile the new dialog.
	* src/business/business-gnome/business-gnome.scm: use the new
	  querylist dialog to display the due bills
	* src/business/business-gnome/dialog-invoice.[ch]: create a new
	  API to run a due-bills dialog.
	* src/business/businss-gnome/gw-business-gnome-spec.scm: wrap the
	  new due-bills api
	* src/engine/gnc-book.c: forcibly signal a book destroy event

	* src/business/business-gnome/dialog-invoice.[ch]: pass a double
	  instead of an int, because guile-1.6 sucks.  Also fix the Query
	  to actually include the Due Date of the invoice.
	* src/business/business-gnome/gw-business-gnome-spec.scm:
	  change the int to a double on the bills-due api

	* src/gnome-utils/print-session.[ch]: added gnucash wrappers
	  around gnome-print's rotate, translate, gsave, and grestore
	  APIs.  All to allow sideways printing (by rotating the image).
	* src/gnome-utils/gw-gnome-utils-spec.scm: wrap the new print-session
	  apis.

	* src/gnome/glade/print.glade: add "Deluxe Personal Check" type
	* src/gnome/dialog-print-check.c: add support for choosing
	  a "deluxe" check type.
	* src/scm/printing/print-check.scm: add support for printing
	  to "deluxe" personal checks.  This prints the check "sideways"
	  on a US-Letter configuration.

	* src/engine/QueryCore.c:
	* src/engine/guid.c:
	* src/engine/kvp-util.c:
	  Fixes for 64-bit architectures.  Fixes bug #113231.
	
2003-05-18  Derek Atkins  <derek@ihtfp.com>
