@@ -1,3 +1,8 @@
+2003-05-20  Derek Atkins  <derek@ihtfp.com>
+
+	* src/scm/printing/print-check.scm: some finer adjustments on
+	  the locations for Deluxe personal checks.
+
 2003-05-19  Derek Atkins  <derek@ihtfp.com>
 
 	* src/engine/QueryNew.[ch]: add gncQueryGetBooks() API to return
